tests/traci/set_variable/TrafficLight/errors/UnknownTL/errors.traci
Error: Answered with error to command 0xc2: Traffic light 'xxx' is not known
